# reftar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  REFLINK_COMPLETE.md  REFLINK_STATUS.md  TESTING.md  TEST_RESULTS.md  USAGE.md
.github/: RELEASE_INSTRUCTIONS.md
.github/workflows/: release.yml
docs/: FILEFORMAT.md
examples/: basic_usage.sh
src/: create.rs  extract.rs  format.rs  lib.rs  main.rs  reflink.rs
tests/: basic_reflink_test.sh  quick_reflink_test.sh  reflink_tests.sh
tools/: README.md  demo_reflink_testing.sh  generate_test_data.sh  test_reftar_full_cycle.sh  verify_block_sharing.sh  verify_physical_sharing.sh
