[package]
name = "reftar"
version = "0.1.0"
edition = "2021"
authors = ["Matt"]
description = "A tar-like utility with support for reflinks and shared data blocks"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
crc32fast = "1.4"
nix = { version = "0.29", features = ["fs", "ioctl", "user"] }

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "reftar"
path = "src/main.rs"
